Change http4k package structure and gradle settings

--- a/http4k-mongodb/build.gradle
+++ b/http4k-mongodb/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.21'
 }
 
-group 'de.novatec.http4k'
+group 'info.novatec.http4k'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
