--- a/spring-kofu-mongodb/build.gradle
+++ b/spring-kofu-mongodb/build.gradle
@@ -9,8 +9,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     compile "org.springframework.fu:spring-fu-kofu:0.0.5"
     compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.8"
-    compile "org.springframework.boot:spring-boot-starter-webflux:2.1.1.BUILD-SNAPSHOT"
-    compile "org.springframework.boot:spring-boot-starter-data-mongodb-reactive:2.1.1.BUILD-SNAPSHOT"
+    compile "org.springframework.boot:spring-boot-starter-webflux:2.1.3.RELEASE"
+    compile "org.springframework.boot:spring-boot-starter-data-mongodb-reactive:2.1.3.RELEASE"
 }
 
 repositories {
