--- a/micronaut-kotlin-mongodb/build.gradle
+++ b/micronaut-kotlin-mongodb/build.gradle
@@ -1,9 +1,10 @@
 plugins {
     id "io.spring.dependency-management" version "1.0.6.RELEASE"
     id "com.github.johnrengelman.shadow" version "4.0.2"
-    id "org.jetbrains.kotlin.jvm" version "1.2.61"
-    id "org.jetbrains.kotlin.kapt" version "1.2.61"
-    id "org.jetbrains.kotlin.plugin.allopen" version "1.2.61"
+    id "application"
+    id "org.jetbrains.kotlin.jvm" version "1.3.21"
+    id "org.jetbrains.kotlin.kapt" version "1.3.21"
+    id "org.jetbrains.kotlin.plugin.allopen" version "1.3.21"
 }
 
 apply plugin:"application"
@@ -19,7 +20,7 @@ repositories {
 
 dependencyManagement {
     imports {
-        mavenBom 'io.micronaut:micronaut-bom:1.0.3'
+        mavenBom 'io.micronaut:micronaut-bom:1.1.0'
     }
 }
 
@@ -35,7 +36,7 @@ dependencies {
     kapt "io.micronaut:micronaut-validation"
     kaptTest "io.micronaut:micronaut-inject-java"
     runtime "ch.qos.logback:logback-classic:1.2.3"
-    runtime "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.7"
+    runtime "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.8"
     testCompile "de.flapdoodle.embed:de.flapdoodle.embed.mongo:2.0.1"
     testCompile "org.junit.jupiter:junit-jupiter-api:5.1.0"
     testCompile "org.jetbrains.spek:spek-api:1.1.5"
