--- a/spring-kofu-mongodb/build.gradle
+++ b/spring-kofu-mongodb/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.21'
+    id "com.github.johnrengelman.shadow" version "4.0.2"
 }
 
 group 'info.novatec.spring-fu'
@@ -18,6 +19,16 @@ repositories {
     mavenCentral()
     maven { url 'https://repo.spring.io/milestone' }
     maven { url "https://repo.spring.io/snapshot" }
+}
+
+jar {
+    manifest {
+        attributes "Main-Class": "info.novatec.spring.fu.ApplicationKt"
+    }
+
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
 
 compileKotlin {
