--- a/spring-kofu-mongodb/build.gradle
+++ b/spring-kofu-mongodb/build.gradle
@@ -8,10 +8,10 @@ version '1.0-SNAPSHOT'
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    compile "org.springframework.fu:spring-fu-kofu:0.0.5"
+    compile "org.springframework.fu:spring-fu-kofu:0.1"
     compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.8"
-    compile "org.springframework.boot:spring-boot-starter-webflux:2.1.3.RELEASE"
-    compile "org.springframework.boot:spring-boot-starter-data-mongodb-reactive:2.1.3.RELEASE"
+    compile "org.springframework.boot:spring-boot-starter-webflux:2.2.0.M3"
+    compile "org.springframework.boot:spring-boot-starter-data-mongodb-reactive:2.2.0.M3"
 }
 
 repositories {
