--- a/micronaut-kotlin-mongodb/build.gradle
+++ b/micronaut-kotlin-mongodb/build.gradle
@@ -2,9 +2,9 @@ plugins {
     id "io.spring.dependency-management" version "1.0.6.RELEASE"
     id "com.github.johnrengelman.shadow" version "4.0.2"
     id "application"
-    id "org.jetbrains.kotlin.jvm" version "1.3.21"
-    id "org.jetbrains.kotlin.kapt" version "1.3.21"
-    id "org.jetbrains.kotlin.plugin.allopen" version "1.3.21"
+    id "org.jetbrains.kotlin.jvm" version "1.3.31"
+    id "org.jetbrains.kotlin.kapt" version "1.3.31"
+    id "org.jetbrains.kotlin.plugin.allopen" version "1.3.31"
 }
 
 apply plugin:"application"
@@ -20,7 +20,7 @@ repositories {
 
 dependencyManagement {
     imports {
-        mavenBom 'io.micronaut:micronaut-bom:1.1.2'
+        mavenBom 'io.micronaut:micronaut-bom:1.1.3'
     }
 }
 
@@ -36,12 +36,12 @@ dependencies {
     kapt "io.micronaut:micronaut-validation"
     kaptTest "io.micronaut:micronaut-inject-java"
     runtime "ch.qos.logback:logback-classic:1.2.3"
-    runtime "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.8"
+    runtime "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.9"
     testCompile "de.flapdoodle.embed:de.flapdoodle.embed.mongo:2.0.1"
-    testCompile "org.junit.jupiter:junit-jupiter-api:5.1.0"
-    testCompile "org.jetbrains.spek:spek-api:1.1.5"
-    testRuntime "org.junit.jupiter:junit-jupiter-engine:5.1.0"
-    testRuntime "org.jetbrains.spek:spek-junit-platform-engine:1.1.5"
+    testCompile "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
+    testCompile "org.jetbrains.spek:spek-api:${spekVersion}"
+    testRuntime "org.junit.jupiter:junit-jupiter-engine:{junitVersion}"
+    testRuntime "org.jetbrains.spek:spek-junit-platform-engine:${spekVersion}"
 }
 
 shadowJar {
