--- a/http4k-mongodb/build.gradle
+++ b/http4k-mongodb/build.gradle
@@ -1,25 +1,34 @@
 plugins {
-    id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.21'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.31'
 }
 
 group 'info.novatec.http4k'
 version '1.0-SNAPSHOT'
-
-sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile group: "org.http4k", name: "http4k-core", version: "3.119.0"
-    compile group: "org.http4k", name: "http4k-server-jetty", version: "3.119.0"
-    compile group: "org.http4k", name: "http4k-format-jackson", version: "3.119.0"
-    compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.10.1'
+    compile group: "org.http4k", name: "http4k-core", version: "3.154.1"
+    compile group: "org.http4k", name: "http4k-server-jetty", version: "3.154.1"
+    compile group: "org.http4k", name: "http4k-format-jackson", version: "3.154.1"
+    compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.10.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
+
+jar {
+    manifest {
+        attributes "Main-Class": "info.novatec.http4k.MainKt"
+    }
+
+    doFirst {
+        from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    }
+    exclude 'META-INF/*.RSA', 'META-INF/*.SF','META-INF/*.DSA'
+}
+
 
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
