--- a/spring-kofu-webflux-mongodb/build.gradle
+++ b/spring-kofu-webflux-mongodb/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.3.21'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.50'
     id "com.github.johnrengelman.shadow" version "4.0.2"
 }
 
@@ -8,10 +8,10 @@ version '1.0-SNAPSHOT'
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    compile "org.springframework.fu:spring-fu-kofu:0.1"
-    compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.8"
-    compile "org.springframework.boot:spring-boot-starter-webflux:2.2.0.M3"
-    compile "org.springframework.boot:spring-boot-starter-data-mongodb-reactive:2.2.0.M3"
+    compile "org.springframework.fu:spring-fu-kofu:0.2"
+    compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.9"
+    compile "org.springframework.boot:spring-boot-starter-webflux:2.2.0.RC1"
+    compile "org.springframework.boot:spring-boot-starter-data-mongodb-reactive:2.2.0.RC1"
 }
 
 repositories {
