--- a/spring-kofu-webflux-mongodb/build.gradle
+++ b/spring-kofu-webflux-mongodb/build.gradle
@@ -8,10 +8,10 @@ version '1.0-SNAPSHOT'
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    compile "org.springframework.fu:spring-fu-kofu:0.2"
-    compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.9"
-    compile "org.springframework.boot:spring-boot-starter-webflux:2.2.0.RC1"
-    compile "org.springframework.boot:spring-boot-starter-data-mongodb-reactive:2.2.0.RC1"
+    compile "org.springframework.fu:spring-fu-kofu:0.2.1"
+    compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.10.0"
+    compile "org.springframework.boot:spring-boot-starter-webflux:2.2.0.RELEASE"
+    compile "org.springframework.boot:spring-boot-starter-data-mongodb-reactive:2.2.0.RELEASE"
 }
 
 repositories {
