--- a/micronaut-kotlin-mongodb/build.gradle
+++ b/micronaut-kotlin-mongodb/build.gradle
@@ -1,10 +1,10 @@
 plugins {
-    id "io.spring.dependency-management" version "1.0.8.RELEASE"
+    id "io.spring.dependency-management" version "1.0.9.RELEASE"
     id "com.github.johnrengelman.shadow" version "4.0.2"
     id "application"
-    id "org.jetbrains.kotlin.jvm" version "1.3.61"
-    id "org.jetbrains.kotlin.kapt" version "1.3.61"
-    id "org.jetbrains.kotlin.plugin.allopen" version "1.3.61"
+    id "org.jetbrains.kotlin.jvm" version "1.3.72"
+    id "org.jetbrains.kotlin.kapt" version "1.3.72"
+    id "org.jetbrains.kotlin.plugin.allopen" version "1.3.72"
 }
 
 apply plugin:"application"
@@ -20,24 +20,25 @@ repositories {
 
 dependencyManagement {
     imports {
-        mavenBom 'io.micronaut:micronaut-bom:1.3.0'
+        mavenBom 'io.micronaut:micronaut-bom:2.0.0'
     }
 }
 
 dependencies {
     compile "io.micronaut:micronaut-http-client"
-    compile "io.micronaut.configuration:micronaut-mongo-reactive"
-    compile "org.mongodb:mongo-java-driver"
+    //compile "org.mongodb:mongo-java-driver:3.12.6"
     compile "io.micronaut:micronaut-http-server-netty"
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}"
     compile "org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}"
     compile "io.micronaut:micronaut-runtime"
+    // implementation "io.micronaut.configuration:micronaut-mongo-reactive"
+    implementation "io.micronaut.mongodb:micronaut-mongo-sync"
     kapt "io.micronaut:micronaut-inject-java"
     kapt "io.micronaut:micronaut-validation"
     kaptTest "io.micronaut:micronaut-inject-java"
     runtime "ch.qos.logback:logback-classic:1.2.3"
-    runtime "com.fasterxml.jackson.module:jackson-module-kotlin:2.10.2"
-    testCompile "de.flapdoodle.embed:de.flapdoodle.embed.mongo:2.0.1"
+    runtime "com.fasterxml.jackson.module:jackson-module-kotlin:2.11.1"
+    testCompile "de.flapdoodle.embed:de.flapdoodle.embed.mongo:2.2.0"
     testCompile "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
     testCompile "org.jetbrains.spek:spek-api:${spekVersion}"
     testRuntime "org.junit.jupiter:junit-jupiter-engine:{junitVersion}"
